# initiatives

./: LICENSE  README.md  pyproject.toml
.github/: issue_validator.py
.github/ISSUE_TEMPLATE/: 01_new-initiative.yaml
.github/workflows/: typecheck.yml  validate-issue.yml
validator/: LICENSE  README.md  __main__.py  checks.py  constants.py  headings.py  markdown.py  report.py  validate.py
