[project]
name = "geojupyter-initiatives"
version = "0.0.0"
dependencies = [
    "gh-issue-validator",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]


[tool.mypy]
files = [".github/issue_validator.py"]
python_version = "3.12"
strict = true


[tool.ruff.lint]
extend-select = [
  "I",  # isort
]
